Added DB Transactions
